# mock-distribtion

./: .gitignore  CMakeLists.txt  playground-script.sh
src/modules/balancer/: balancer.main.cpp
src/modules/server/: server.main.cpp
src/modules/sink/: sink.main.cpp
src/modules/worker/: worker.main.cpp
